// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistorialSkeleton renderiza 1 sola fila cuando se pide 1`] = `
<View>
  <View
    className="overflow-hidden rounded-[14px]"
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
    testID="historial-skeleton"
  >
    <View
      className="h-[52px] bg-borde-suave "
    />
  </View>
</View>
`;

exports[`HistorialSkeleton renderiza 5 filas por defecto 1`] = `
<View>
  <View
    className="overflow-hidden rounded-[14px]"
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
    testID="historial-skeleton"
  >
    <View
      className="h-[52px] bg-borde-suave border-b border-borde-suave"
    />
    <View
      className="h-[52px] bg-borde-suave border-b border-borde-suave"
    />
    <View
      className="h-[52px] bg-borde-suave border-b border-borde-suave"
    />
    <View
      className="h-[52px] bg-borde-suave border-b border-borde-suave"
    />
    <View
      className="h-[52px] bg-borde-suave "
    />
  </View>
</View>
`;
